ncc/testsuite/negative/enums.n
enum B : byte {
  | X = 2
  | Y
  | Z = 2222 // E: supplied value 2222 cannot be converted to System.Byte and isn't valid as enum field initializer
}
